issue table container overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,10 @@ img {
     padding-bottom: 20px;
 }
 
+.table-container {
+  overflow: scroll;
+}
+
 .footer {
   width: auto;
   height: auto;
@@ -233,7 +237,6 @@ img {
   height: auto;
   row-gap: 25px;
   column-gap: 25px;
- 
 }
 
 .box-strengths {
@@ -649,7 +652,7 @@ textarea {
   .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-35deg);
   }
-
+/*
   .corners {
     border-width: thin;
   }
@@ -658,5 +661,5 @@ textarea {
   .box-strengths {
     border-width: thin;
   }
-
+*/
 }
